--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "expo-image-manipulator": "~8.3.0"
   },
   "devDependencies": {
     "react-native-web": "~0.13.7",
