--- a/app.json
+++ b/app.json
@@ -1,21 +1,20 @@
 {
   "expo": {
-    "name": "chat-app",
+    "name": "Wired Brain Chat",
+    "description": "Coffee drinkers unite!",
     "slug": "chat-app",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/wired-brain-icon.png",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/wired-brain-coffee-logo.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
