--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
   },
   "dependencies": {
     "@microsoft/signalr": "^3.1.9",
+    "@react-native-async-storage/async-storage": "^1.13.2",
     "expo": "~39.0.2",
-    "expo-image-picker": "~9.1.0",
+    "expo-image-manipulator": "~8.3.0",
+    "expo-image-picker": "^9.1.1",
     "expo-status-bar": "~1.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
-    "react-native-web": "~0.13.12",
-    "expo-image-manipulator": "~8.3.0"
+    "react-native-web": "~0.13.12"
   },
   "devDependencies": {
     "react-native-web": "~0.13.7",
